add erueka